<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:background="@drawable/bitmap"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" 
        android:contentDescription="@string/imgDesc"
        android:src="@drawable/user_profile"
        />
  

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"         
            android:textColor="#222222"
            android:textSize="19sp"
            android:textStyle="bold"
            android:typeface="serif"
            />

         <TextView
            android:id="@+id/projectNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_numbers"
           	android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="#666666"                                                
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif"
            /> 

       <!--  <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
           	android:layout_marginTop="5dp"
            android:textColor="#999999"
            android:textSize="12sp"
           	/> -->

    </LinearLayout>

</LinearLayout>
