<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/bit"
       android:orientation="vertical" >
       <!-- android:background="#b2b2b2" -->

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="10dp"
	    android:background="@drawable/bitmap"
	    android:orientation="vertical"
	    android:padding="10dp" >

       <!--  android:background="#b2b3b6" -->
        <TextView
         android:id="@+id/delivName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/project_name"
         android:textColor="#181717"
         android:textSize="22sp"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:typeface="serif"
         />
            
        <TextView
         android:id ="@+id/delivDescription"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="5dp"
         android:text="@string/project_description"
         android:textColor="#393939"      
         android:textSize="14sp" 
         android:typeface="serif"
         />
            
	</LinearLayout>
      
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:layout_marginTop="10dp"
		android:padding="10dp"
		android:background="@drawable/bitmap" 
		android:typeface="serif"
		>
        
	    <TextView
         android:id="@+id/delivStatus"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/deliv_status"
         android:textColor="#181717"
         android:textSize="19sp"
         android:textStyle="bold"
         android:typeface="serif"
         />
        
		<TextView
         android:id="@+id/upvote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/upvote_data"
         android:textColor="#181717"
         android:textSize="19sp"
         android:textStyle="bold"
         android:typeface="serif"
         />
          
		<TextView
		android:id="@+id/downvote"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/downvote_data"
		android:textColor="#181717"
		android:textSize="19sp"
		android:textStyle="bold"
		android:typeface="serif"
		/>
            
	</LinearLayout>
		
	<LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/bitmap"
     android:padding="10dp">
               
		<TextView
	     android:id="@+id/currentVoteDetail"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/current_vote"
	     android:textColor="#181717"
	     android:textSize="19sp"
	     android:layout_gravity="center"
	     android:typeface="serif"
	     android:textStyle="bold"
	     />
		
		<TextView
         android:id="@+id/coming_soon"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="1.Voting feature"
         android:textColor="#181717"
         android:textSize="15sp"
         android:typeface="serif"
         android:paddingTop="5dp"
         
         />
		<TextView
         android:id="@+id/image_profile"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="2.Profile Picture in Student List"
         android:textColor="#181717"
         android:textSize="15sp"
         android:typeface="serif"
         android:paddingTop="5dp"
         />
		<TextView
         android:id="@+id/fasterLoading"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="3.Faster Loading"
         android:textColor="#181717"
         android:textSize="15sp"
         android:typeface="serif"
         android:paddingTop="5dp"
         />
		<TextView
         android:id="@+id/dataOffline"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="4.Data available offline"
         android:textColor="#181717"
         android:textSize="15sp"
         android:typeface="serif"
         android:paddingTop="5dp"
         />
	
 		<!-- <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal" 
         style="android:attr/buttonBarStyle"
         android:weightSum="2"
         >
               
         	<Button 
            android:id="@+id/upvoteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
        	android:text="@string/upvote_button"
        	style="android:attr/buttonBarButtonStyle"
        	android:layout_weight="1"
        	/>
               
            <Button
             android:id="@+id/downvoteButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
         	 android:text="@string/downvote_button" 
         	 style="@android:attr/buttonBarButtonStyle"
         	 android:layout_weight="1"
         	 />
            
 		</LinearLayout> -->
	</LinearLayout>


 </LinearLayout>